--- a/index.html
+++ b/index.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile card component</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="top-left-bg">
-        <img src="Images/bg-pattern-top.svg" alt="" />
-      </div>
-      <div class="card">
-        <div class="top-bg">
-          <img src="Images/bg-pattern-card.svg" alt="" />
-        </div>
-        <div class="data">
-          <div class="person-img">
-            <img
-              class="img"
-              src="Images/image-victor.jpg"
-              alt="An error occured"
-            />
-          </div>
-          <h3>Some One <span>26</span></h3>
-          <span>London</span>
-          <div class="stats-container">
-            <div class="stats">
-              <h3>80K</h3>
-              <p>Followers</p>
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Profile card component</title>
+      <link rel="stylesheet" href="style.css" />
+   </head>
+   <body>
+      <div class="container">
+         <div class="top-left-bg">
+            <img src="Images/bg-pattern-top.svg" alt="" />
+         </div>
+         <div class="card">
+            <div class="top-bg">
+               <img src="Images/bg-pattern-card.svg" alt="" />
             </div>
-            <div class="stats">
-              <h3>803K</h3>
-              <p>Likes</p>
+            <div class="data">
+               <div class="person-img">
+                  <img
+                     class="img"
+                     src="Images/image-victor.jpg"
+                     alt="An error occured"
+                  />
+               </div>
+               <h3>Victor Crest <span>26</span></h3>
+               <span>London</span>
+               <div class="stats-container">
+                  <div class="stats">
+                     <h3>80K</h3>
+                     <p>Followers</p>
+                  </div>
+                  <div class="stats">
+                     <h3>803K</h3>
+                     <p>Likes</p>
+                  </div>
+                  <div class="stats">
+                     <h3>1.4K</h3>
+                     <p>Photos</p>
+                  </div>
+               </div>
             </div>
-            <div class="stats">
-              <h3>1.4K</h3>
-              <p>Photos</p>
-            </div>
-          </div>
-        </div>
+         </div>
+         <div class="bottom-right-bg">
+            <img src="Images/bg-pattern-bottom.svg" alt="" />
+         </div>
       </div>
-      <div class="bottom-right-bg">
-        <img src="Images/bg-pattern-bottom.svg" alt="" />
-      </div>
-    </div>
-  </body>
+   </body>
 </html>
